--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["src/index.ts", "global.d.ts"],
+    "include": ["src/index.ts"],
     "compilerOptions": {
         "rootDir": "src",
         "noEmitOnError": true,
